--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="content">
-        <h1>Inputted Image</h1>
+        <h1>Input Image</h1>
         <form method="post" action="/" enctype="multipart/form-data">
             <p>
                 <input type="file" name="image" class="form-control" autocomplete="off" required>
@@ -18,7 +18,9 @@
                 <input type="submit" value="Submit" class="btn btn-info">
             </p>
     </form>
-       
+       {% if img %}
+        <img src="{{ img }}">
+        {% endif %}
   </body>
 
 </html>
