--- a/templates/index.html
+++ b/templates/index.html
@@ -9,24 +9,22 @@
   </head>
   <body>
     <div class="content">
-        <h1>Input Image</h1>
+        <h1 style="text-align:center">Input Image</h1>
         <form method="post" action="/" enctype="multipart/form-data">
-            <p>
-                <input type="file" name="image" class="form-control" autocomplete="off" required>
-            </p>
-            <p>
-                <input type="submit" value="Submit" class="btn btn-info">
-            </p>
+            <center>
+              <input type="file" name="image" class="form-control" autocomplete="off" required> <input type="submit" value="Submit" class="btn btn-info">
+            </center>
     </form>
-        {% if img %}
-          <img src="{{ img }}", width="400px;">
-        {% endif %}
 
         {% if prediction %}
           {% if animal %}
+          <center>
             <h3>Watch out its a {{ prediction }}!!</h3>
+          </center>
           {% else %}
-            <h3>Thtas not an animal its a {{ prediction }}</h3>
+          <center>
+            <h3>That's not an animal its a {{ prediction }}!</h3>
+          </center>
           {% endif %}
         {% endif %}
 
